see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note


16-Feb-2010 Mark Dexter
^ New system tests for groups, ACL

16-Feb-2010 Jean-Marie Simonet
^ Refactoring com_checkin inis/keys. $ sprintf. Thanks Omar.
^ Refactoring com_cache ini/keys

15-Feb-2010
# Allow Groups to be deleted correctly

15-Feb-2010 Jean-Marie Simonet
$ Translating Menu Item Type in Menu Manager: Menu items.
^ Updated en-GB.xml back

14-Feb-2010 Jean-Marie Simonet
^ $ Refactored extensions names in sql extension table and xmls to fit INI standards. Updated ini keys. 
^ Changing editors-xtd name. Updating more ini keys. Loading translation in Manage View.
+ Adding xx-XX frontend language for testing purposes.

13-Feb-2010 Mark Dexter
^ Change "Apply" to "Save" in back end edit screens

13-Feb-2010 Jean-Marie Simonet
^ Refactoring mod_wrapper ini/keys
^ Refactoring mod_weblinks ini/keys
^ Refactoring mod_whosonline

13-Feb-2010 Ian MacLennan
# Eliminating errors in unit tests
# Fixed some doc blocks
# Changed JTableUser to use preg_match instead of eregi

12-Feb-2010 Mark Dexter
+ New system test for create user - thanks Matt Thomas!
+ New method for create user in system test

12-Feb-2010 Jean-Marie Simonet
^ Refactored mod_search ini/keys
^ Refactored mod_stats ini/keys + bugs
^ Refactored mod_syndicate ini/keys
^ Refactored mod_users_latest ini/keys

11-Feb-2010 jean-Marie Simonet
^ Refactored mod_related_items ini/keys
^ Translating Menu Items Titles in Select view

11-Feb-2010 Christophe Demko
^ Use $db->getNullDate for calendar fields which are empty
^ Recommit patch 14775

10-Feb-2010 Christophe Demko
+ Adding publish_up and publish_down for modules
