@@ -6,12 +6,14 @@
 
 TPL_BLUESTORK="Bluestork admin template"
 
-TEMPLATE_BLUESTORK_DESC="BlueStork is a new template for the Joomla 1.6 administrator back-end."
-ENABLE_DISABLE_ROUNDED_CORNER_EFFECT="Enable or disable the rounded corner effect for the template."
-BLUESTORK="BlueStork"
-SHOW SITE NAME="Show Site Name"
-SHOW THE SITE NAME IN THE TEMPLATE HEADER="Show the site name in the template header"
-USE ROUNDED CORNERS="Use Rounded Corners"
-BIGGER TEXT="Bigger Text"
-HIGH CONTRAST="High Contrast"
+TPL_BLUESTORK_FIELD_CONTRAST_DESC="Increase the contrast for better readability"
+TPL_BLUESTORK_FIELD_CONTRAST_LABEL="High Contrast"
+TPL_BLUESTORK_FIELD_ROUNDED_DESC="Enable or disable the rounded corner effect for the template."
+TPL_BLUESTORK_FIELD_ROUNDED_LABEL="Use Rounded Corners"
+TPL_BLUESTORK_FIELD_SITENAME_DESC="Show the site name instead of generic 'Administration' in the template header."
+TPL_BLUESTORK_FIELD_SITENAME_LABEL="Show Site Name"
+TPL_BLUESTORK_FIELD_TEXTBIG_DESC="Increase the size of text for better readability"
+TPL_BLUESTORK_FIELD_TEXTBIG_LABEL="Bigger Text"
+TPL_BLUESTORK_XML_DESCRIPTION="BlueStork is a new template for the Joomla 1.6 administrator back-end."
 
+TPL_BLUESTORK_HEADER="Administration"
